# ds4_pc

./: README.md  ds4_compact_interface.json  ds4_map.json  pyproject.toml
src/ds4_pc/: __init__.py  cli.py  compact_interface.py  hid_reader.py  report_mapper.py
tests/: test_compact_interface.py  test_ds4_map.py  test_hid_reader.py  test_report_mapper.py
